Finally fixes extra spacing at the bottom of the page

--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -22,6 +22,7 @@ body, html {
 	font-family: 'ubuntu-regular';
 	color: $FontColor;
 	background: linear-gradient(to bottom right, $TernaryColor, $QuaternaryColor);
+	overflow: hidden;
 }
 
 .logobar {
@@ -104,8 +105,7 @@ a:hover {
 
 .photo-container {
 	margin-top: -16vh;
-	height: 100vh;
-	max-height: 100vh;
+	height: 102vh;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
